// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with value 1`] = `
<label
  class="input default left"
>
  <input
    type="text"
    value="Filter"
  />
</label>
`;

exports[`Render with value of undefined 1`] = `
<label
  class="input default left"
>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`Render with value set by setValue 1`] = `
<label
  class="input default left"
>
  <input
    type="text"
    value="New value"
  />
</label>
`;
